# employee_catalog_django_app

./: .gitignore  pyproject.toml
online_employees_catalog/: manage.py  seed.py  setenv.sh
online_employees_catalog/employee_catalog/: admin.py  apps.py  models.py  urls.py  views.py
online_employees_catalog/employee_catalog/migrations/: 0001_initial.py  0002_employee_self_chief_alter_employee_chief_and_more.py  0003_remove_employee_self_chief.py  0004_employee_hierarchy_lvl_counter_alter_employee_chief.py  0005_alter_employee_hierarchy_lvl_counter.py  0006_alter_employee_hierarchy_lvl_counter.py  0007_alter_employee_chief.py  0008_employee_depth_employee_numchild_employee_path.py  0009_alter_employee_path.py  0010_remove_employee_chief_and_more.py  0011_rename_chief_id_employee_chief.py  0012_remove_employee_chief.py
online_employees_catalog/employee_catalog/templates/employee_catalog/: base.html  employee_catalog_tree.html
online_employees_catalog/employees_catalog_app/: admin.py  models.py  tests.py
online_employees_catalog/employees_catalog_app/migrations/: 0002_employee_self_chief_alter_employee_chief_and_more.py
online_employees_catalog/online_employees_catalog/: asgi.py  settings.py  urls.py  wsgi.py
